DB50 text detection

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,14 @@
 cmake_minimum_required(VERSION 3.10)
-project(Document_recognition LANGUAGES CXX)
+project(DocumentDetection LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Document_recognition main.cpp)
+add_executable(DocumentDetection main.cpp)
 
 find_package(OpenCV REQUIRED)
 
-include_directories(${OpenCV_INCLUDE_DIRS})
-
-target_link_libraries(Document_recognition ${OpenCV_LIBS})
+set(BUILD_SHARED_LIBS OFF)
+target_include_directories(DocumentDetection PRIVATE ${OpenCV_INCLUDE_DIRS})
+target_link_libraries(DocumentDetection PRIVATE ${OpenCV_LIBS})
 
 # target_include_directories(Document_recognition PRIVATE
 #     "${OpenCV_DIR}/include/opencv2"
@@ -24,7 +24,7 @@ target_link_libraries(Document_recognition ${OpenCV_LIBS})
 # )
 
 if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
-    target_compile_options(Document_recognition PRIVATE 
+    target_compile_options(DocumentDetection PRIVATE 
         -Wno-deprecated-declarations
 )
 endif()
